# brainfuck

./: CMakeLists.txt  Interpreter.cpp  Interpreter.h  main.cpp  out.txt  state.txt  test.bf
